--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "This is the demo of dynamic webpage",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon src/app.js -e js,hbs"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Ritik Kumar Pathak",
   "license": "ISC",
