--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This is the demo of dynamic webpage",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/app.js -e js,hbs"
   },
   "author": "Ritik Kumar Pathak",
   "license": "ISC",
